# rein

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: test.yml
benchmarks/: bench.py
examples/: a2a_server.py  enterprise_chat.py  hitl_demo.py  middleware_demo.py  minimal.py  mock_demo.py
src/rein/: __init__.py  a2a.py  agent.py  circuit.py  cli.py  compaction.py  config.py  ir.py  log.py  loop.py  middleware.py  otel.py  plugins.py  result.py  scaffold.py  session.py  store.py  tools.py
src/rein/providers/: __init__.py  base.py  fallback.py  litellm.py  mock.py
src/rein/runtime/: __init__.py  base.py  docker.py  local.py
tests/: test_a2a.py  test_agent.py  test_circuit.py  test_cli.py  test_compaction.py  test_concurrency.py  test_config.py  test_docker.py  test_extensions_compat.py  test_fallback.py  test_hooks.py  test_ir.py  test_log.py  test_loop.py  test_middleware.py  test_otel.py  test_providers.py  test_result.py  test_resume.py  test_runtime.py  test_scaffold.py  test_session.py  test_smoke_providers.py  test_store.py  test_stream.py  test_tools.py
