[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rein"
version = "0.0.1"
description = "一个极薄但生产级的单-agent harness 框架:5 行把任意大模型变成能调工具、自己循环干活的 agent"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Rein Authors" }]
keywords = ["agent", "llm", "harness", "ai", "tool-use", "litellm", "agentic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0",
    "anyio>=4.0",
]

[project.urls]
Homepage = "https://github.com/MaLunan/rein"
Documentation = "https://malunan.github.io/rein/"
Repository = "https://github.com/MaLunan/rein"
Changelog = "https://github.com/MaLunan/rein/blob/main/CHANGELOG.md"

[project.optional-dependencies]
litellm = ["litellm>=1.0"]
docker = ["docker>=7.0"]
otel = ["opentelemetry-sdk", "opentelemetry-exporter-otlp"]
cli = ["typer>=0.9"]
docs = ["mkdocs-material>=9.5"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=3.8",
]

[project.scripts]
rein = "rein.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/rein"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["rein"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["rein"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = ["pragma: no cover", "raise NotImplementedError", "if TYPE_CHECKING:"]

[tool.mypy]
python_version = "3.11"
files = ["src"]
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
